Cleaning and updating GSI driver, needs to be revisited and then move into testing

--- a/simulation_settings/VD/3denvar_lag00_b0.00_v03_h0300/namelists/parame.in
+++ b/simulation_settings/VD/3denvar_lag00_b0.00_v03_h0300/namelists/parame.in
@@ -1,8 +1,8 @@
 &control_param
- da_file            = './wrfout_'
- wrf_input          = './wrfvar_out'
+ DA_FILE            = DA_FILE
+ WRF_INPUT          = WRF_INPUT
  wrf_bdy_file       = './wrfinput_d01'
- domain_id          = 1
+ DOMAIN_ID          = DOMAIN_ID
  debug              = .true.
  update_lateral_bdy = .false.
  update_low_bdy     = .false.
