Reviewed WRFDA and GSI scripts, preparing to design xml logic for restart runs

--- a/simulation_settings/VD/3denvar_lag00_b0.00_v03_h0300/namelists/parame.in
+++ b/simulation_settings/VD/3denvar_lag00_b0.00_v03_h0300/namelists/parame.in
@@ -4,8 +4,8 @@
  wrf_bdy_file       = './wrfinput_d01'
  DOMAIN_ID          = DOMAIN_ID
  debug              = .true.
- update_lateral_bdy = .false.
- update_low_bdy     = .false.
+ UPDATE_LATERAL_BDY = UPDATE_LATERAL_BDY
+ UPDATE_LOW_BDY     = UPDATE_LOW_BDY
  update_lsm         = .false.
  iswater            = 16
  var4d_lbc          = .false.
