Need to rerun tests

--- a/simulation_settings/VD/3denvar_lag00_b0.00_v03_h0300/namelists/parame.in
+++ b/simulation_settings/VD/3denvar_lag00_b0.00_v03_h0300/namelists/parame.in
@@ -1,7 +1,7 @@
 &control_param
  DA_FILE            = DA_FILE
  WRF_INPUT          = WRF_INPUT
- wrf_bdy_file       = './wrfinput_d01'
+ wrf_bdy_file       = './wrfbdy_d01'
  DOMAIN_ID          = DOMAIN_ID
  debug              = .true.
  UPDATE_LATERAL_BDY = UPDATE_LATERAL_BDY
